--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "locotoko backend",
+  "name": "backend",
   "version": "0.1.0",
   "description": "Inventory Manager for online listings",
   "author": "Ed Salisbury",
