--- a/backend/.prettierrc
+++ b/backend/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "singleQuote": false,
+  "trailingComma": "all",
+  "printWidth": 50,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true
 }
