--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,11 @@ services:
     ports:
       - 5434:5432
     environment:
+      PHOST: 0.0.0.0
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: locotoko
+
     networks:
       - locotoko
   test-db:
@@ -18,6 +20,24 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 123
       POSTGRES_DB: locotoko
+    networks:
+      - locotoko
+  prod-db:
+    image: postgres:13
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_HOST: 0.0.0.0
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: RFpGgmUFJPvw8rZY
+      POSTGRES_DB: locotoko
+
+    networks:
+      - locotoko
+  server:
+    image: locotoko:0.1.3
+    ports:
+      - 80:3333
     networks:
       - locotoko
 networks:
