Added initial ebay module

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "db:prod:rm": "docker compose rm prod-db -s -f -v",
     "db:prod:up": "docker compose up prod-db -d",
     "db:prod:restart": "yarn db:prod:rm && yarn db:dev:up && sleep 1 && yarn prisma:prod:deploy",
-
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -36,16 +35,17 @@
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/common": "^8.4.5",
+    "@nestjs/core": "^8.4.5",
+    "@nestjs/jwt": "^8.0.1",
     "@nestjs/passport": "^8.2.1",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.5",
     "@nestjs/serve-static": "^2.2.2",
     "@prisma/client": "^3.12.0",
     "argon2": "^0.28.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "ebay-api": "^7.0.0",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "prisma": "^3.12.0",
