--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,29 @@ services:
     image: postgres:13
     ports:
       - 5434:5432
+    env_file: .env.dev
+    environment:
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
     networks:
       - locotoko
   test-db:
     image: postgres:13
     ports:
       - 5435:5432
+    env_file: .env.test
+    environment:
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
+      - POSTGRES_DB
     networks:
       - locotoko
   prod-db:
     image: postgres:13
     ports:
       - 5432:5432
-    env_file:
-      - .env
+    env_file: .env.prod
     environment:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
