--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
+    "prisma:dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "prisma:dev:deploy": "dotenv -e .env.dev -- prisma migrate deploy",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
