Added some util funcs

--- a/client/package.json
+++ b/client/package.json
@@ -41,7 +41,7 @@
     "extends": [
       "plugin:vue/essential",
       "eslint:recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
