--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "prisma:dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
     "prisma:dev:deploy": "dotenv -e .env.dev -- prisma migrate deploy",
-    "db:dev:rm": "docker compose rm dev-db -s -f -v",
-    "db:dev:up": "docker compose up dev-db -d",
-    "db:dev:restart": "yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
+    "db:dev:rm": "dotenv -e .env.dev -- docker compose rm dev-db -s -f -v",
+    "db:dev:up": "dotenv -e .env.dev -- docker compose up dev-db -d",
+    "db:dev:restart": "dotenv -e .env.dev -- yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
     "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
     "db:test:rm": "docker compose rm test-db -s -f -v",
     "db:test:up": "docker compose up test-db -d",
