--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "prisma": "^3.12.0",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
