--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "Inventory Manager for online listings",
   "author": "Ed Salisbury",
   "repository": "https://github.com/EdSalisbury/locotoko",
@@ -48,6 +48,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "ebay-api": "^7.0.0",
+    "node-ptouch": "^0.0.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "prisma": "^3.12.0",
