--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.7.1",
+  "version": "0.8.1",
   "private": true,
   "scripts": {
     "start": "dotenv -e ../.env.dev -- vue-cli-service serve",
@@ -13,7 +13,8 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-cookie": "^1.1.4",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-toast-notification": "^0.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
