--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-cookie": "^1.1.4",
+    "vue-js-modal": "^2.0.1",
     "vue-router": "^3.5.1",
     "vue-toast-notification": "^0.6.3"
   },
