--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "ebay-api": "^7.0.0",
+    "ebay-node-api": "^2.9.0",
     "node-ptouch": "^0.0.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
