--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "pretest:e2e": "yarn db:test:restart",
-    "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json"
+    "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
+    "ebay:prod": "dotenv -e .env.prod node ebay/index.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.5",
