--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "ebay-api": "^7.0.0",
+    "ipp": "^2.0.1",
     "node-ptouch": "^0.0.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
