--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.23.18",
+  "version": "0.23.19",
   "description": "Inventory Manager for online listings",
   "author": "Ed Salisbury",
   "repository": "https://github.com/EdSalisbury/locotoko",
@@ -51,6 +51,7 @@
     "class-validator": "^0.13.2",
     "ebay-api": "^7.0.0",
     "ipp": "^2.0.1",
+    "mdns": "^2.7.2",
     "node-ptouch": "^0.0.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
