--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.23.20",
   "private": true,
   "scripts": {
-    "start": "dotenv -e ../.env.dev -- vue-cli-service serve",
+    "start": "dotenv -e ../.env.dev vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
