--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.26.20",
+  "version": "0.26.21",
   "private": true,
   "scripts": {
     "start": "dotenv -e ../.env.dev vue-cli-service serve",
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "bootstrap": "4.6.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
