--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:test:restart": "yarn db:test:rm && yarn db:test:up && sleep 1 && yarn prisma:test:deploy",
     "prisma:prod:deploy": "dotenv -e .env.prod -- prisma migrate deploy",
     "prebuild": "rimraf dist",
-    "deploy": "yarn version && VERSION=`grep '\"version\"' package.json | awk -F \\\" '{print $4}'` && cd client && yarn version --no-git-tag-version --new-version $VERSION && cd .. && git add client/package.json && git commit -m 'Updated version to $VERSION' && git tag $VERSION && git push origin && git push origin $VERSION && docker build -t edsalisbury/locotoko:$VERSION . && docker tag edsalisbury/locotoko:$VERSION edsalisbury/locotoko:latest && docker push edsalisbury/locotoko:$VERSION && docker push edsalisbury/locotoko:latest",
+    "deploy": "yarn version && VERSION=`grep '\"version\"' package.json | awk -F \\\" '{print $4}'` && cd client && yarn version --no-git-tag-version --new-version $VERSION && cd .. && git add client/package.json && git commit -m 'Updated version to $VERSION' && git tag $VERSION && git push origin && git push origin $VERSION && docker build -t edsalisbury/locotoko:$VERSION . && docker tag edsalisbury/locotoko:$VERSION edsalisbury/locotoko:latest && docker push edsalisbury/locotoko:$VERSION && docker push edsalisbury/locotoko:latest && ssh 192.168.1.42 /home/ed/locotoko/restart.sh",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
