--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.32.1",
+  "version": "0.32.2",
   "private": true,
   "scripts": {
     "start": "dotenv -e ../.env.dev vue-cli-service serve",
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@canvasjs/charts": "^3.7.11",
     "axios": "^1.2.1",
     "bootstrap": "4.6.1",
     "bootstrap-vue": "^2.22.0",
+    "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "vue": "^2.7.0",
+    "vue-chartjs": "^5.2.0",
     "vue-cookie": "^1.1.4",
     "vue-html2pdf": "^1.8.0",
     "vue-js-modal": "^2.0.1",
@@ -24,10 +25,10 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-plugin-babel": "~5.0.6",
+    "@vue/cli-plugin-eslint": "~5.0.6",
+    "@vue/cli-plugin-router": "~5.0.6",
+    "@vue/cli-service": "~5.0.6",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -36,8 +37,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
     "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "vue-template-compiler": "^2.6.14"
+    "sass-loader": "^13.0.2"
   },
   "eslintConfig": {
     "root": true,
