--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.34.9",
+  "version": "0.35.0",
   "description": "Inventory Manager for online listings",
   "author": "Ed Salisbury",
   "repository": "https://github.com/EdSalisbury/locotoko",
@@ -48,7 +48,7 @@
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "ebay-api": "^7.0.0",
+    "ebay-api": "8",
     "ipp": "^2.0.1",
     "node-ptouch": "^0.0.4",
     "passport": "^0.5.2",
