--- a/package.json
+++ b/package.json
@@ -7,19 +7,21 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "prisma:dev:migrate": "dotenv -e .env.dev -- prisma migrate dev",
-    "prisma:dev:deploy": "dotenv -e .env.dev -- prisma migrate deploy",
-    "db:dev:rm": "dotenv -e .env.dev -- docker compose rm dev-db -s -f -v",
-    "db:dev:up": "dotenv -e .env.dev -- docker compose up dev-db -d",
-    "db:dev:restart": "dotenv -e .env.dev -- yarn db:dev:rm && yarn db:dev:up && sleep 1 && yarn prisma:dev:deploy",
-    "prisma:test:deploy": "dotenv -e .env.test -- prisma migrate deploy",
-    "db:test:rm": "docker compose rm test-db -s -f -v",
-    "db:test:up": "docker compose up test-db -d",
-    "db:test:restart": "yarn db:test:rm && yarn db:test:up && sleep 1 && yarn prisma:test:deploy",
-    "prisma:prod:deploy": "dotenv -e .env.prod -- prisma migrate deploy",
+    "prisma:migrate:dev": "dotenv -e .env.dev -- prisma migrate dev",
+    "prisma:deploy:dev": "dotenv -e .env.dev -- prisma migrate deploy",
+    "prisma:deploy:prod": "dotenv -e .env.prod -- prisma migrate deploy",
+    "prisma:rollback:prod": "dotenv -e .env.prod -- prisma migrate resolve --rolled-back",
+    "prisma:deploy:test": "dotenv -e .env.test -- prisma migrate deploy",
+    "db:start:dev": "dotenv -e .env.dev -- docker compose up dev-db -d && sleep 5 && yarn prisma:deploy:dev",
+    "db:stop:dev": "dotenv -e .env.dev -- docker compose down dev-db -s -f -v",
+    "db:restart:dev": "dotenv -e .env.dev -- yarn db:stop:dev && yarn db:start:dev",
+    "db:start:test": "dotenv -e .env.test -- docker compose up test-db -d && sleep 1 && yarn prisma:deploy:test",
+    "db:stop:test": "dotenv -e .env.test -- docker compose down test-db -s -f -v",
+    "db:restart:test": "dotenv -e .env.test -- yarn db:stop:test && yarn db:start:test",
+    "db:dev:import": "scp 192.168.1.42:/mnt/data01/backups/locotoko/latest.tgz /tmp && mkdir -p /tmp/sql && tar zxvf /tmp/latest.tgz -C /tmp/sql && docker exec -i locotoko-dev-db-1 psql -U postgres locotoko < `ls -1 /tmp/sql/mnt/data01/backups/locotoko/*.sql`",
     "prebuild": "rimraf dist",
-    "deploy": "yarn version && VERSION=`grep '\"version\"' package.json | awk -F \\\" '{print $4}'` && cd client && yarn version --no-git-tag-version --new-version $VERSION && cd .. && git add client/package.json && git commit -m 'Updated version to $VERSION' && git tag $VERSION && git push origin && git push origin $VERSION && docker build -t edsalisbury/locotoko:$VERSION . && docker tag edsalisbury/locotoko:$VERSION edsalisbury/locotoko:latest && docker push edsalisbury/locotoko:$VERSION && docker push edsalisbury/locotoko:latest && ssh 192.168.1.42 /home/ed/locotoko/restart.sh",
-    "build": "nest build",
+    "deploy:prod": "yarn version && VERSION=`grep '\"version\"' package.json | awk -F \\\" '{print $4}'` && cd client && yarn version --no-git-tag-version --new-version $VERSION && cd .. && git add client/package.json && git commit -m 'Updated version to $VERSION' && git tag $VERSION && git push origin && git push origin $VERSION && docker build -t edsalisbury/locotoko:$VERSION . && docker tag edsalisbury/locotoko:$VERSION edsalisbury/locotoko:latest && docker push edsalisbury/locotoko:$VERSION && docker push edsalisbury/locotoko:latest && ssh 192.168.1.42 /home/ed/locotoko/restart.sh",
+    "build:prod": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "dotenv -e .env.dev -- nest start --watch",
@@ -30,11 +32,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "pretest:e2e": "yarn db:test:restart",
+    "pretest:e2e": "yarn db:restart:test",
     "test:e2e": "dotenv -e .env.test -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "ebay:prod": "dotenv -e .env.prod node ebay/index.js",
-    "prisma:prod:rollback": "dotenv -e .env.prod -- prisma migrate resolve --rolled-back",
-    "db:dev:copy": "scp 192.168.1.42:/mnt/data01/backups/locotoko/latest.tgz /tmp && mkdir -p /tmp/sql && tar zxvf /tmp/latest.tgz -C /tmp/sql && docker exec -i locotoko-dev-db-1 psql -U postgres locotoko < `ls -1 /tmp/sql/mnt/data01/backups/locotoko/*.sql`"
+    "docker:build:dev": "docker compose build locotoko-dev",
+    "docker:start:dev": "docker compose up locotoko-dev -d",
+    "docker:stop:dev": "docker compose down locotoko-dev --remove-orphans",
+    "docker:restart:dev": "yarn docker:stop:dev && yarn docker:start:dev",
+    "docker:logs:dev": "docker compose logs -f locotoko-dev",
+    "docker:shell:dev": "docker exec -it locotoko-dev zsh"
   },
   "dependencies": {
     "@nestjs/common": "^8.4.5",
@@ -43,17 +49,17 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
     "@nestjs/serve-static": "^2.2.2",
-    "@prisma/client": "^3.12.0",
+    "@prisma/client": "^6.2.1",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cross-env": "^7.0.3",
     "ebay-api": "8",
     "ipp": "^2.0.1",
     "node-ptouch": "^0.0.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "prisma": "^3.12.0",
     "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -79,13 +85,14 @@
     "jest": "^27.2.5",
     "pactum": "^3.1.6",
     "prettier": "^2.3.2",
+    "prisma": "^6.2.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^5.7.3"
   },
   "jest": {
     "moduleFileExtensions": [
