--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "0.41.9",
+  "version": "0.41.10",
   "description": "Inventory Manager for online listings",
   "author": "Ed Salisbury",
   "repository": "https://github.com/EdSalisbury/locotoko",
@@ -12,19 +12,19 @@
     "prisma:deploy:prod": "dotenv -e .env.prod -- prisma migrate deploy",
     "prisma:rollback:prod": "dotenv -e .env.prod -- prisma migrate resolve --rolled-back",
     "prisma:deploy:test": "dotenv -e .env.test -- prisma migrate deploy",
-    "db:start:dev": "dotenv -e .env.dev -- docker compose up dev-db -d && sleep 5 && yarn prisma:deploy:dev",
-    "db:stop:dev": "dotenv -e .env.dev -- docker compose down dev-db -s -f -v",
+    "db:start:dev": "dotenv -e .env.dev -- docker compose up dev-db -d && sleep 10 && yarn prisma:deploy:dev",
+    "db:stop:dev": "dotenv -e .env.dev -- docker compose down dev-db -v --remove-orphans",
     "db:restart:dev": "dotenv -e .env.dev -- yarn db:stop:dev && yarn db:start:dev",
     "db:start:test": "dotenv -e .env.test -- docker compose up test-db -d && sleep 1 && yarn prisma:deploy:test",
     "db:stop:test": "dotenv -e .env.test -- docker compose down test-db -s -f -v",
     "db:restart:test": "dotenv -e .env.test -- yarn db:stop:test && yarn db:start:test",
-    "db:dev:import": "scp 192.168.1.42:/mnt/data01/backups/locotoko/latest.tgz /tmp && mkdir -p /tmp/sql && tar zxvf /tmp/latest.tgz -C /tmp/sql && docker exec -i locotoko-dev-db-1 psql -U postgres locotoko < `ls -1 /tmp/sql/mnt/data01/backups/locotoko/*.sql`",
+    "db:dev:import": "scp ed@192.168.1.42:/mnt/data01/backups/locotoko/latest.tgz /tmp && mkdir -p /tmp/sql && tar zxvf /tmp/latest.tgz -C /tmp/sql && docker exec -i locotoko-dev-db-1 psql -U postgres locotoko < `ls -1 /tmp/sql/mnt/data01/backups/locotoko/*.sql`",
     "prebuild": "rimraf dist",
     "deploy:prod": "zsh deploy.sh",
     "build:prod": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "dotenv -e .env.dev -- nest start --watch",
+    "start:dev": "dotenv -e .env.dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "dotenv -e .env.prod -- node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
