--- a/client/package.json
+++ b/client/package.json
@@ -29,12 +29,14 @@
     "@vue/cli-plugin-eslint": "~5.0.6",
     "@vue/cli-plugin-router": "~5.0.6",
     "@vue/cli-service": "~5.0.6",
+    "autoprefixer": "^10.4.20",
     "dotenv-cli": "^5.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "lint-staged": "^11.1.2",
+    "postcss": "^8.4.47",
     "prettier": "^2.4.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2"
