--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "db:start:test": "dotenv -e .env.test -- docker compose up test-db -d && sleep 1 && yarn prisma:deploy:test",
     "db:stop:test": "dotenv -e .env.test -- docker compose down test-db -s -f -v",
     "db:restart:test": "dotenv -e .env.test -- yarn db:stop:test && yarn db:start:test",
-    "db:dev:import": "scp ed@192.168.1.42:/mnt/data01/backups/locotoko/latest.tgz /tmp && mkdir -p /tmp/sql && tar zxvf /tmp/latest.tgz -C /tmp/sql && docker exec -i locotoko-dev-db-1 psql -U postgres locotoko < `ls -1 /tmp/sql/mnt/data01/backups/locotoko/*.sql`",
+    "db:dev:import": "scp ed@192.168.1.42:/mnt/data01/backups/locotoko/latest.tgz /tmp && mkdir -p /tmp/sql && tar zxvf /tmp/latest.tgz -C /tmp/sql && sql_file=$(find /tmp/sql/mnt/data01/backups/locotoko -type f -name '*.sql' | head -n 1) && test -n \"$sql_file\" && docker exec locotoko-dev-db-1 psql -U postgres -d locotoko -c \"DROP SCHEMA IF EXISTS public CASCADE; CREATE SCHEMA public;\" && docker exec -i locotoko-dev-db-1 psql -U postgres locotoko < \"$sql_file\"",
     "prebuild": "rimraf dist",
     "deploy:prod": "zsh deploy.sh",
     "build:prod": "nest build",
@@ -49,7 +49,7 @@
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.5",
     "@nestjs/serve-static": "^2.2.2",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "6.2.1",
     "argon2": "^0.28.5",
     "axios": "^0.27.2",
     "class-transformer": "^0.5.1",
@@ -86,7 +86,7 @@
     "jest": "^27.2.5",
     "pactum": "^3.1.6",
     "prettier": "^2.3.2",
-    "prisma": "^6.2.1",
+    "prisma": "6.2.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
