--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "node",
     "declaration": true,
     "esModuleInterop": true,
     "removeComments": true,
@@ -18,8 +19,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
-    "lib": [
-      "ES2021.String"
-    ]
+    "lib": ["ES2017", "DOM", "ES2021.String"]
   }
 }
